# oapp

./: .gitignore  .solitarc.js  Anchor.toml  Cargo.toml  package-lock.json  package.json
programs/my-project/: Cargo.toml
programs/my-project/src/: instructions_old.rs  lib.rs  msg_codec.rs  state.rs
programs/my-project/src/instructions/: mod.rs  register_oapp.rs  send.rs  set_remote.rs
programs/oapp/: Cargo.toml
programs/oapp-example/: Cargo.toml
programs/oapp-example/src/: lib.rs
programs/oapp-example/src/instructions/: quote.rs
programs/oapp/src/: lib.rs
programs/portfolio/: Cargo.toml
programs/portfolio-bridge/: Cargo.toml
programs/portfolio-bridge/src/: consts.rs  errors.rs  lib.rs  state.rs  xfer.rs
programs/portfolio-bridge/src/instructions/: init_bridge.rs  initialize.rs  mod.rs  quote.rs  register_oapp.rs  send.rs  set_remote.rs  token_list.rs
programs/portfolio/src/: consts.rs  cpi_utils.rs  errors.rs  events.rs  lib.rs  xfer.rs
programs/portfolio/src/instructions/: admin.rs  banned_account.rs  global_config.rs  initialize.rs  quote.rs  send.rs  token_list.rs
scripts/: common.ts  init.ts  initialize.js  initialize.ts  interact.ts
sdk/: bridge-pda-deriver.ts  command.ts  handlers.ts  interactor.ts  main.ts  package-lock.json  package.json  seed.ts  tsconfig.json  utils.ts
sdk/solita-generated/accounts/: Remote.ts
sdk/solita-generated/errors/: index.ts
sdk/solita-generated/instructions/: index.ts  initBridge.ts  quote.ts
sdk/solita-generated/types/: MessagingReceipt.ts  QuoteParams.ts  SendParams.ts  Tx.ts  index.ts
tests/: my-project.ts  oapp-example.ts
