[package]
name = "oapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=0.29.0"
cpi-helper = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", branch = "main" }
endpoint = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", branch = "main", features = ["cpi"] }
oapp = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", branch = "main" }
solana-program = "=1.17.31"
