[package]
name = "portfolio_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "portfolio_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
oapp = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git" }
solana-program = "=1.17.31"
anyhow = "1.0.95"
hex = "0.4.3"
